PN-11182: added DiscardedEvents entity and related services.
