# docs/openapi/internal/externalchannel/gestore-repository-v1.yaml
@@ -13,8 +13,29 @@ tags:
     description: Operazioni per la configurazione dei client
   - name: GestoreRequest
     description: Operazione per la gestione delle richieste
+  - name: DiscardedEvents
+    description: Operazioni per la gestione delle richieste scartate
 
 paths:
+  /external-channel/gestoreRepository/discarded-events:
+    post:
+      tags:
+        - DiscardedEvents
+      operationId: insertDiscardedEvents
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: array
+              minItems: 1
+              items:
+                $ref : '#/components/schemas/DiscardedEventDto'
+        required: true
+      responses:
+        200:
+          $ref: '#/components/responses/discardedEventResponseOk'
+
+
   /external-channel/gestoreRepository/clients/{xPagopaExtchCxId}:
     parameters:
       - name: xPagopaExtchCxId
@@ -208,6 +229,15 @@ components:
 
   responses:
 
+    discardedEventResponseOk:
+      description: OK
+      content:
+        application/json:
+          schema:
+            type: array
+            items:
+              $ref: '#/components/schemas/DiscardedEventDto'
+
     clientResponseOk:
       description: OK
       content:
@@ -364,3 +394,17 @@ components:
             description: >-
               come da specifiche di configurazione delle retry policy per la sola parte di interesse del canale
             example: '"SMS":[5,10,20,40],"EMAIL":[5,10,20,40],"PEC":[5,10,20,40],"PAPER":[5,10,20,40]'
+
+    DiscardedEventDto:
+      type: object
+      properties:
+        requestId:
+          type: string
+        timestampRicezione:
+          type: string
+        dataRicezione:
+          type: string
+        codiceScarto:
+          type: string
+        jsonRicevuto:
+          type: string
